expression and flow editor

--- a/static/layout/styles/layout.css
+++ b/static/layout/styles/layout.css
@@ -195,7 +195,7 @@ ul.expr-item-list a:hover {text-decoration: none}
 #modal-new-array th, #modal-new-array th {text-align: center; vertical-align: middle}
 
 /* flow editor */
-#flow-container .flow-content {display: flex; align-content: space-between}
+#flow-container .flow-content {display: flex; align-content: space-between; align-items: center}
 #flow-container .flow-item {text-align: center}
 #flow-container .flow-item::after {content: url(/static/images/down.png); text-align: center}
 #flow-container .flow-item:last-child::after {content: none}
