--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -48,6 +48,9 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
         <button type="button" class="btn" data-color="primary" style="width:100%">設為小老師</button>
         <input type="checkbox" style="display: none;" name="assistant"/>
     </span></td></tr>              
+<tr><td colspan=2><span class="button-checkbox">
+ <textarea  name="comment" id="id_comment" class="form-control animated comment" cols="50" placeholder="請寫下評語(可留白)" rows="5">{% if work.comment %}{{work.comment}}{% endif %}</textarea>
+</span></td></tr> 	
               {% endif %}
               <tr><td colspan=2><input type="submit" value="Submit"></td></tr>
             </table>
