--- a/templates/show/round_list.html
+++ b/templates/show/round_list.html
@@ -8,9 +8,8 @@
 <tr>
   <td><a href="/show/group/{{round.id}}"><img src="/static/images/icon_group_new.png">創意秀({{forloop.revcounter}})</a></td>
   <td>關閉互評</td>
-  <td>評分情形</td>
-  <td>評分結果</td>
-  <td>個人評語</td>
+  <td><a href="/show/teacher/scoring/{{round.id}}"><img src="/static/images/icon_group_new.png">評分情形</a></td>  
+  <td><a href="/show/teacher/grading/{{round.id}}"><img src="/static/images/icon_group_new.png">評分結果</a></td>  
   </tr>
 
 {% endfor %}
