--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a href="#">APCS(Python)大學先修程式設計</a>
             <ul>
               <li><a href="https://hackmd.io/s/HypYLEPtQ" target="_blank">觀念題（整理中）</a></li>
+              <li><a href="https://hackmd.io/c/B10IFy4a7/https%3A%2F%2Fhackmd.io%2Fs%2FHyATt1VpX" target="_blank">進階程式設計（整理中）</a></li>	  			  
             </ul>           
           </li>           
           <li><a href="#">Robot機器人(開放硬體)程式設計</a>
