--- a/templates/show/gallerylist.html
+++ b/templates/show/gallerylist.html
@@ -19,7 +19,7 @@
  
 <script >   
 var flashvars = {
-project: "/{{show.file}}" ,
+project: "/static/show/{{show.id}}/{{show.file}}" ,
 autostart: "false"
 };
 
