--- a/templates/show/gallerydetail.html
+++ b/templates/show/gallerydetail.html
@@ -26,7 +26,7 @@
  
 <script >   
 var flashvars = {
-project: "/{{show.file}}" ,
+project: "/static/show/{{show.id}}/{{show.file}}" ,
 autostart: "false"
 };
 
