--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,8 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>
           <li><a href="#">APCS(Python)大學先修程式設計</a>
             <ul>
+              <li><a href="http://www.sec.ntnu.edu.tw/Monthly/91%28246-255%29/247/71%E7%BE%8E%E5%9C%8B%E9%AB%98%E4%B8%AD%E7%9A%84%E5%85%88%E4%BF%AE%E5%A4%A7%E5%AD%B8%E9%9B%BB%E8%85%A6%E7%A7%91%E5%AD%B8%E8%AA%B2%E7%A8%8B_apcs_%E7%B0%A1%E4%BB%8B.pdf" target="_blank">美國高中的先修大學電腦科學課程(APCS)簡介-科學教育月刊(2002)</a></li>			  
+              <li><a href="https://apcs.csie.ntnu.edu.tw/" target="_blank">我國APCS大學程式設計先修檢測</a></li>			  			  
               <li><a href="https://repl.it/community/classrooms/17929?fbclid=IwAR2xQ-WTWZ86eVzRGIuctqPdKTRSQFZDvL3YuuX4lRn3IUxNwvJ5t9Cwoho" target="_blank">Auto-Graded Course with Solutions</a></li>
               <li><a href="https://hackmd.io/c/B10IFy4a7/https%3A%2F%2Fhackmd.io%2Fs%2FHyATt1VpX" target="_blank">ZeroJudge：高中生解題系統</a></li>	  			  
               <li><a href="https://hackmd.io/s/HypYLEPtQ" target="_blank">觀念題（整理中）</a></li>			  
