--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -117,7 +117,7 @@
         <li><a href="/account/about">網站開發人員</a></li>   
         <li><a href="/account/manual">網站使用手冊</a></li>           
         <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
-        <li><a href="/account/statics/zone">分區數據統計</a></li>
+        <li><a href="/account/people">教材研發人員</a></li>
         <li><a href="/account/statics/login/">使用者登入統計</a></li>
         <li><a href="/account/contact">連絡我們</a></li>        
       </ul>
