--- a/templates/account/people.html
+++ b/templates/account/people.html
@@ -3,7 +3,7 @@
 <H1>教材研發人員</H1>
 
 <div class="card">
-  <h5 class="card-header">Scratch</h5>
+  <h5 class="card-header">Scratch動畫及遊戲創作程式設計</h5>
   <div class="card-body">
 <table>
 <tr><td><img src="/static/images/about/jean2014.png"></td></tr>
@@ -14,7 +14,7 @@
 <BR>
 
 <div class="card">
-  <h5 class="card-header">VPhysics</h5>
+  <h5 class="card-header">VPhysics(Python)物理模擬程式設計</h5>
   <div class="card-body">
 <table>
 <tr>
@@ -29,7 +29,7 @@
 <BR>
 
 <div class="card">
-  <h5 class="card-header">Django</h5>
+  <h5 class="card-header">Django(Python)網站開發程式設計</h5>
   <div class="card-body">
 <table>
 <tr>
@@ -42,7 +42,7 @@
 <BR>
 
 <div class="card">
-  <h5 class="card-header">Euler</h5>
+  <h5 class="card-header">Euler(Python)數學解題程式設計</h5>
   <div class="card-body">
 <table>
 <tr>
@@ -56,7 +56,7 @@
 <BR>
 
 <div class="card">
-  <h5 class="card-header">Pandas</h5>
+  <h5 class="card-header">Pandas(Python)數據分析程式設計</h5>
   <div class="card-body">
 <table>
 <tr>
@@ -70,7 +70,7 @@
 <BR>
 
 <div class="card">
-  <h5 class="card-header">APCS</h5>
+  <h5 class="card-header">APCS(Python)大學先修程式設計</h5>
   <div class="card-body">
 <table>
 <tr>
@@ -85,7 +85,7 @@
 <BR>
 
 <div class="card">
-  <h5 class="card-header">Robot</h5>
+  <h5 class="card-header">Robot機器人(開放硬體)程式設計</h5>
   <div class="card-body">
 <table>
 <tr>
