--- a/templates/account/people.html
+++ b/templates/account/people.html
@@ -47,7 +47,7 @@
 <table>
 <tr>
 <td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/boy.png"><BR>吳秉鋒(華江高中)</td>
+<td><img src="/static/images/about/wu.png"><BR>吳秉鋒(華江高中)</td>
 <td><img src="/static/images/about/yuan.png"><BR>賴錦緣(台中科技大學)</td>
 </tr>
 </table>
