--- a/templates/account/people.html
+++ b/templates/account/people.html
@@ -19,7 +19,7 @@
 <table>
 <tr>
 <td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/mfshih.png"><BR>石明豐(台大物理)</td>
+<td><img src="/static/images/about/mfshih.png"><BR>石明豐(台灣大學)</td>
 <td><img src="/static/images/about/boy.png"><BR>曾靖夫(建國中學)</td>
 <td><img src="/static/images/about/boy.png"><BR>賴奕帆(建國中學)</td>
 </tr>
@@ -48,7 +48,7 @@
 <tr>
 <td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
 <td><img src="/static/images/about/wu.png"><BR>吳秉鋒(華江高中)</td>
-<td><img src="/static/images/about/yuan.png"><BR>賴錦緣(台中科技大學)</td>
+<td><img src="/static/images/about/yuan.png"><BR>賴錦緣(臺中科技大學)</td>
 </tr>
 </table>
   </div>
@@ -61,8 +61,8 @@
 <table>
 <tr>
 <td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/pecu.png"><BR>蔡芸琤(台大共教中心)</td>
-<td><img src="/static/images/about/mfshih.png"><BR>石明豐(台大物理)</td>
+<td><img src="/static/images/about/pecu.png"><BR>蔡芸琤(臺灣大學)</td>
+<td><img src="/static/images/about/mfshih.png"><BR>石明豐(臺灣大學)</td>
 </tr>
 </table>
   </div>
