--- a/templates/account/people.html
+++ b/templates/account/people.html
@@ -19,7 +19,7 @@
 <table>
 <tr>
 <td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/mfshih.png"><BR>石明豐(台灣大學)</td>
+<td><img src="/static/images/about/mfshih.png"><BR>石明豐(臺灣大學)</td>
 <td><img src="/static/images/about/boy.png"><BR>曾靖夫(建國中學)</td>
 <td><img src="/static/images/about/boy.png"><BR>賴奕帆(建國中學)</td>
 </tr>
