--- a/templates/student/lessonG.html
+++ b/templates/student/lessonG.html
@@ -180,13 +180,12 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
     </li>
-   --> 
+    -->
     {% if user.is_authenticated %}
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab3" role="tab" aria-selected="false">作業</a>
     </li>
     {% endif %}
-
   </ul>
   <br />
   <div class="tab-content" id="myTabContent">
@@ -197,14 +196,13 @@
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/vIvCIH3-CIw?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
     </div>
-    
+    -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=7 %}
+      {% include "student/submitE.html" with index=8 %}
     </div>
     {% endif %}
   </div>
-    -->
 {% endif %}
 {% endblock %}
 
