--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -1105,7 +1105,7 @@
 <section class="wrapper">
   <ul class="nav nav-pills" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">範例：貓貓大戰</a>
+      <a class="nav-link active" data-toggle="tab" href="#tab1" role="tab" aria-selected="true">範例：夾娃娃</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tab2" role="tab" aria-selected="false">影片</a>
@@ -1115,18 +1115,18 @@
     </li>
     {% if user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#tab4" role="tab" aria-selected="false">作業：貓貓大戰</a>
+      <a class="nav-link" data-toggle="tab" href="#tab4" role="tab" aria-selected="false">作業：夾娃娃</a>
     </li>
     {% endif %}
   </ul>
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel">
-      遊戲方法：在畫面上方有一個跑動中的力道指標，當按下滑鼠左鍵後，左方的小黃貓就會依力道發出一顆棒球，力道愈大，棒球飛得愈遠。棒球打到右方的小貓，會記錄擊中的次數。試試看，看你能不能百發百中？<br />
-      <iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/94187701/?autostart=false" frameborder=“0” allowfullscreen></iframe>
+		遊戲方法：用滑鼠點一下硬幣，夾子會左右移動，瞄準好娃娃後按一下滑鼠左鍵，<BR>夾子會往下移動，若碰到娃娃，會把它捉起來，並且丟到箱子裡。若三隻娃娃都<BR>夾到箱子，娃娃就會一起跑出洞口。<br>
+		<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/94187814/?autostart=false" frameborder=“0” allowfullscreen></iframe>
     </div>
     <div class="tab-pane fade show" id="tab2" role="tabpanel">
-      <iframe width="900" height="520" src="https://www.youtube.com/embed/EZBQKwC2VDA?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+         <iframe width="900" height="520" src="https://www.youtube.com/embed/__XATaQZaYE?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>   
     </div>
     <div class="tab-pane fade show" id="tab3" role="tabpanel">
       <a role="button" class="btn" href="/static/files/scratch/{{lesson}}.zip">下載</a>
